Fixed: Center aligning in events

--- a/client/src/components/EventsList/CultEventsList.css
+++ b/client/src/components/EventsList/CultEventsList.css
@@ -6,11 +6,11 @@
 
 .culteventsGrid{
 	width: 100%;
-	height: 1050px;
+	height: 1110px;
 }
 
 .cultEventBlock{
-	margin-left: 50px;
+	margin-left:20px;
 	width: 200px;
 	height: 200px;
 	background: black;
@@ -19,7 +19,7 @@
 	text-align: center;
 	font-family: Yataghan-Regular;
 	line-height: 200px;
-	transition: width 0.5s, height 0.5s, margin-left 0.5s, background 0.5s, line-height 0.5s,color 0.5s;
+	transition: width 0.3s, height 0.3s, margin-left 0.3s, background 0.3s, line-height 0.3s,color 0.3s;
 }
 
 .cultEventBlock:hover{
@@ -34,5 +34,6 @@
 .blocks{
 	margin-top: 20px;
 	display: inline-flex;
-	
+	width: 50%;
+	margin-left: 26%;
 }
